@@ -6,7 +6,7 @@
 /*   By: abait-ta <abait-ta@student.1337.ma >       +#+  +:+       +#+        */
 /*                                                +#+#+#+#+#+   +#+           */
 /*   Created: 2023/10/08 12:57:21 by abait-ta          #+#    #+#             */
-/*   Updated: 2023/10/22 19:00:03 by abait-ta         ###   ########.fr       */
+/*   Updated: 2023/10/28 21:40:34 by abait-ta         ###   ########.fr       */
 /*                                                                            */
 /* ************************************************************************** */
 
@@ -27,9 +27,9 @@ int	run_env(char **cmd_tabl, t_my_env **env)
 		if (curs->var_content)
 		{
 			write(1, curs->var, ft_strlen(curs->var));
-			write(1, "=", 2);
+			write(1, "=", 1);
 			write(1, curs->var_content, ft_strlen(curs->var_content));
-			write(1, "\n", 2);
+			write(1, "\n", 1);
 		}
 		curs = curs->next;
 	}
