@@ -6,7 +6,7 @@
 /*   By: abait-ta <abait-ta@student.1337.ma >       +#+  +:+       +#+        */
 /*                                                +#+#+#+#+#+   +#+           */
 /*   Created: 2023/10/08 13:14:35 by abait-ta          #+#    #+#             */
-/*   Updated: 2023/10/24 22:25:28 by abait-ta         ###   ########.fr       */
+/*   Updated: 2023/10/28 21:42:53 by abait-ta         ###   ########.fr       */
 /*                                                                            */
 /* ************************************************************************** */
 
@@ -21,11 +21,11 @@ int	run_pwd(char **cmd_table)
 	working_dir = getcwd(NULL, 1024);
 	if (!working_dir)
 	{
-		write(STDERR_FILENO, "Buffer is not large Enough\n", 28);
+		write(STDERR_FILENO, "Buffer is not large Enough\n", 27);
 		return (EXIT_FAILURE);
 	}
 	write(1, working_dir, ft_strlen(working_dir));
-	write(1, "\n", 2);
+	write(1, "\n", 1);
 	free(working_dir);
 	return (SUCCES_PROC);
 }
