@@ -6,7 +6,7 @@
 /*   By: abait-ta <abait-ta@student.1337.ma >       +#+  +:+       +#+        */
 /*                                                +#+#+#+#+#+   +#+           */
 /*   Created: 2023/10/05 18:55:48 by abait-ta          #+#    #+#             */
-/*   Updated: 2023/10/20 15:49:57 by abait-ta         ###   ########.fr       */
+/*   Updated: 2023/10/28 14:36:04 by abait-ta         ###   ########.fr       */
 /*                                                                            */
 /* ************************************************************************** */
 
@@ -56,12 +56,12 @@ char	**cmd_table_remplisseur(t_cmd **head)
 	return (cmd_table);
 }
 
-t_cmd_table	*build_commandtable_node(t_cmd **head)
+t_cmd_table	*build_commandtable_node(t_cmd **head, t_my_env **env)
 {
 	t_cmd_table	*node;
 	t_in_out	fd;
 
-	fd = process_fd(head);
+	fd = process_fd(head, env);
 	node = (t_cmd_table *)malloc(sizeof(t_cmd_table));
 	if (!node)
 		return (NULL);
@@ -89,14 +89,14 @@ void	addto_listt(t_cmd_table **cmd, t_cmd_table *next_data)
 	}
 }
 
-void	cmd_table_builder(t_cmd_table **cmd_table, t_cmd **head)
+void	cmd_table_builder(t_cmd_table **cmd_table, t_cmd **head, t_my_env **env)
 {
 	t_cmd	*curs;
 
 	curs = (*head);
 	while (curs)
 	{
-		addto_listt(cmd_table, build_commandtable_node(&curs));
+		addto_listt(cmd_table, build_commandtable_node(&curs, env));
 		curs = head_cursur(curs);
 	}
 }
