@@ -6,7 +6,7 @@
 /*   By: abait-ta <abait-ta@student.1337.ma >       +#+  +:+       +#+        */
 /*                                                +#+#+#+#+#+   +#+           */
 /*   Created: 2023/09/27 21:28:17 by abait-ta          #+#    #+#             */
-/*   Updated: 2023/10/20 16:54:15 by abait-ta         ###   ########.fr       */
+/*   Updated: 2023/10/28 21:44:27 by abait-ta         ###   ########.fr       */
 /*                                                                            */
 /* ************************************************************************** */
 
@@ -18,17 +18,17 @@ void	error_announcer(char *error, int syntax)
 
 	if (syntax == 666)
 	{
-		write(STDERR_FILENO, "unset : ", 9);
-		write(STDERR_FILENO, "bad variable name : \n", 22);
-		write(2, "\"https://www.linkedin.com/pulse/", 33);
-		write(2, "bash-scripting-conventions-engin-polat\"\n", 41);
+		write(STDERR_FILENO, "unset : ", 8);
+		write(STDERR_FILENO, "bad variable name : \n", 21);
+		write(2, "\"https://www.linkedin.com/pulse/", 32);
+		write(2, "bash-scripting-conventions-engin-polat\"\n", 40);
 		return ;
 	}
 	syntaxe = "syntax error : ";
 	if (syntax)
 		write (STDERR_FILENO, syntaxe, ft_strlen(syntaxe));
 	write(STDERR_FILENO, error, ft_strlen(error));
-	write(1, "\n", 2);
+	write(1, "\n", 1);
 }
 
 t_token_list	*behind_getter(t_token_list *cursus)
